A few typos in Lecture 8

--- a/Homework8.ipynb
+++ b/Homework8.ipynb
@@ -30,15 +30,13 @@
    "source": [
     "## Problem 1:\n",
     "\n",
-    "Prove the statement:\n",
+    "Derive the weak duality property by proving the following statement:\n",
     "\n",
-    "* If $\\mathbf{x}^*$ is a solution to the original optimization problem (**Primal Problem**), then for $\\forall \\mathbf{\\lambda} \\succeq 0$ and any $\\mathbf{\\mu}$,\n",
+    "* If $\\mathbf{x}^*$ is a solution to the original optimization problem (**Primal Problem**), then the Lagrange Dual function defined in the slides satisfies: for $\\forall \\mathbf{\\lambda} \\succeq 0$ and any $\\mathbf{\\mu}$,\n",
     "\n",
     "$$\n",
     "\\hat{f}(\\mathbf{\\mu}, \\mathbf{\\lambda}) \\leq f(\\mathbf{x}^*).\n",
-    "$$\n",
-    "     \n",
-    "   "
+    "$$"
    ]
   },
   {
@@ -68,7 +66,7 @@
     "\n",
     "Prove the statement that for convex problems, any local minimum is also a global minimum.\n",
     "\n",
-    "Hint: use contradiction, define the circle of the local mimimum region, if there is a lower global minimum, find a point within the local circle that its function value is less than the local minimum value.\n"
+    "Hint: proof by contradiction. Define the ball for the local mimimum region, and assume there is a lower global minimum, find a point within the ball such that its function value is less than the local minimum value.\n"
    ]
   }
  ],
