--- a/Lecture8.ipynb
+++ b/Lecture8.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "## Topics\n",
     "\n",
-    "* Introduction\n",
+    "* I. Introduction\n",
     "\n",
     "    * Formulation\n",
     "    * Types of Optimization Problems\n",
@@ -54,7 +54,7 @@
    },
    "source": [
     "\n",
-    "* Unconstrained Optimization\n",
+    "* II. Unconstrained Optimization\n",
     "\n",
     "    * Optimality Characterization\n",
     "    * Solution Methods\n",
@@ -75,10 +75,9 @@
     }
    },
    "source": [
+    "       \n",
     "\n",
-    "        \n",
-    "\n",
-    "* Constrained Optimization\n",
+    "* III. Constrained Optimization\n",
     "    * General framework\n",
     "    * Duality\n",
     "    * Optimality conditions\n",
@@ -98,7 +97,7 @@
    },
    "source": [
     "\n",
-    "# Introduction\n",
+    "# I. Introduction\n",
     "\n",
     "Optimization exists in every field, particularly in finance: most activities in finance revolve around some goals that needed to be optimized, e.g. maximizing profits, minimizing risk, maximizing utility, and minimizing costs etc.\n",
     "\n",
@@ -349,7 +348,7 @@
     "* A point $\\bx^*$ is a **global minimum**, if  \n",
     "$$\n",
     "f(\\bx^*) \\leq f(\\bx), \\forall \\bx\\in\\Psi.\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
@@ -360,13 +359,19 @@
     }
    },
    "source": [
+    "* Finding the global minimum is considerably harder than a local minimum --- imaging the difference in the difficulties of getting to the top of your neighborhood hill top vs getting to the top of Mt. Everest.\n",
     "\n",
-    "* Finding a global minimum is considerably harder than a local minimum --- imaging the difference in the difficulties of getting to the top of your neighborhood hill top vs getting to the top of Mt. Everest.\n",
-    "\n",
-    "* With one exception: for convex problems, the local minimum is the also global solution.\n",
+    "* With one exception: for convex problems, any local minimum is also globally optimal (homework).\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -391,7 +396,7 @@
     "\\min_{\\bx}\\left[ f(\\bx)^T f(\\bx)\\right],\n",
     "$$\n",
     "\n",
-    "(although this is rarely advised --- doing anything through square or higher power is generally a bad idea --- it  makes the problem harder to solve).\n",
+    "(although this is normally ill-advised --- doing anything through square or higher power when you can avoid it is generally a bad idea --- it makes the problem harder to solve, think ill-conditioning as a starter).\n",
     "\n",
     "* But this shows the root searching problem and the optimization problem are closely related.\n"
    ]
@@ -422,7 +427,7 @@
    },
    "source": [
     "\n",
-    "* If $f(\\bx)$ is twice-differentiable (i.e. second derivatives exist), then a **sufficent condition** for a local minimizer is, in addition to being a critical point,  the **Hessian** at $\\bx^*$ is positive definite\n",
+    "* If $f(\\bx)$ is twice-differentiable (i.e. second derivatives exist), then a **sufficient condition** for a local minimizer is, in addition to being a critical point,  the **Hessian** at $\\bx^*$ is positive definite\n",
     "\n",
     "$$\n",
     "{\\bs H} (\\bx^*) = {\\bs\\nabla^2} _\\bx f(\\bx^*)  \\succ 0\n",
@@ -525,7 +530,7 @@
     }
    },
    "source": [
-    "# Unconstrained Optimization\n",
+    "# II. Unconstrained Optimization\n",
     "\n",
     "* Unconstrained means:\n",
     "\n",
@@ -826,7 +831,7 @@
     }
    },
    "source": [
-    "# Constrained Optimization\n",
+    "# III. Constrained Optimization\n",
     "\n",
     "* Now add  constraints.\n",
     "\n",
@@ -953,7 +958,7 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "* If $(\\bmu^*, \\bld^*)$ is a solution to the  **Dual Problem**, it's clear that **the weak duality** holds,\n",
+    "* If $(\\bmu^*, \\bld^*)$ is a solution to the  **Dual Problem**, it's straightforward (homework) that **the weak duality** holds,\n",
     "\n",
     "$$\n",
     "\\df(\\bmu^*, \\bld^*) \\leq f(\\bx^*).\n",
@@ -982,7 +987,6 @@
     "    which implies the primal and the dual problems are equivalent.\n",
     "\n",
     "\n",
-    "* In the **Maximum Entropy Method** lecture later, this will be explored in greater details.\n",
     "\n",
     "\n"
    ]
@@ -1116,10 +1120,9 @@
     "* Best way to visualize the conditions 1 and 4 above is through the following example, where\n",
     "\n",
     "$$ f(\\bx^*) = (x_1 -2)^2 + (x_2 -2)^2, \\;\\;\\; g(\\bx^*) = x_1^2 + x_2^2 - 1$$\n",
-    "\n",
-    "\n",
     "<center><img src = \"img/KKT_cond_4.PNG\" height=700 width=700></center>\n",
-    "\n"
+    "\n",
+    "  * with $ \\bld > 0 $."
    ]
   },
   {
