Slight updates in Lecture9

--- a/Lecture8.ipynb
+++ b/Lecture8.ipynb
@@ -218,9 +218,7 @@
     }
    },
    "source": [
-    "\n",
-    "\n",
-    "* If $f(\\bx)$ is linear and $\\Psi$ is a polyhedron, then **Linear Programming**, otherwise, **Nonlinear Programming**\n",
+    "* If $f(\\bx)$ is linear and $\\Psi$ is a polyhedron, then **Linear Programming**, otherwise, **Nonlinear Programming**. (Polyhedron is defined as intersection of finite number of halfspaces and hyperplanes.)\n",
     "\n"
    ]
   },
@@ -232,15 +230,7 @@
     }
    },
    "source": [
-    "\n",
-    "\n",
-    "* If $f(\\bx)$ is quadratic and $\\Psi$ is a polyhedron, then **Quadratic Programming**\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "* If $f(\\bx)$ is quadratic and $\\Psi$ is a polyhedron, then **Quadratic Programming**"
    ]
   },
   {
@@ -1112,7 +1102,7 @@
     "\n",
     "* Best way to visualize the conditions 1 and 4 above is through the following example, where\n",
     "\n",
-    "$$ f(\\bx^*) = (x_1 -2)^2 + (x_2 -2)^2, \\;\\;\\; g(\\bx^*) = x_1^2 + x_2^2 - 1$$\n",
+    "$$ f(\\bx^*) = (x_1 -2)^2 + (x_2 + 2)^2, \\;\\;\\; g(\\bx^*) = x_1^2 + x_2^2 - 1$$\n",
     "<center><img src = \"img/KKT_cond_4.PNG\" height=700 width=700></center>\n",
     "\n",
     "  * with $ \\bld > 0 $."
@@ -1128,7 +1118,10 @@
    "source": [
     "## Solution Methods\n",
     "\n",
-    "* The solution method for the constrained optimization problems are generally an extension of those for unconstrained version. We are not going into great details, but will use the Sequential Quadratic Programming (**SQP**) method as an example.\n",
+    "* There are two main competing approaches to solve the constrained optimization problems:\n",
+    "    * Sequential Quadratic Programming (SQP): BFGS, NLOPT, SNOPT\n",
+    "    * Interior Point Method (IPT): IPOPT, KNITRO, LOQO\n",
+    "* We are not going into great details, but will expand the SQP method slightly (and will get into IPT method later).\n",
     "\n"
    ]
   },
@@ -1155,6 +1148,19 @@
     "$$\n",
     "\n",
     "* This is a constrained quadratic programming problem, which is \"slightly\" easier to deal with than the original problem.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "# References: \n",
+    "S. Boyd and L. Vandenberghe (2004), Convex Optimization, Cambridge University Press.\n"
    ]
   }
  ],
