--- a/Lecture9.ipynb
+++ b/Lecture9.ipynb
@@ -33,16 +33,13 @@
     "#Lecture 9: Linear Programming and ALM: Cash-Flow Matching\n",
     "\n",
     "## Topics\n",
-    "\n",
-    "\n",
-    "* Linear Programming Theory\n",
+    "* I. Linear Programming Theory\n",
     "\n",
     "    * Formulation\n",
     "    * Duality\n",
     "    * Solution Methods\n",
     "        * Simplex Method\n",
-    "        * Primal-Dual Interior-Point Method    \n",
-    "\n"
+    "        * Primal-Dual Interior-Point Method "
    ]
   },
   {
@@ -53,9 +50,7 @@
     }
    },
    "source": [
-    "\n",
-    "\n",
-    "* LP: Asset Liability Manamgement: Cash-Flow Matching\n",
+    "* II. Asset Liability Manamgement: Cash-Flow Matching\n",
     "\n",
     "    * Basic setup\n",
     "    * Example\n",
@@ -72,7 +67,7 @@
     }
    },
    "source": [
-    "# Linear Programming Theory\n",
+    "# I. Linear Programming Theory\n",
     "\n",
     "\n",
     "## Formulation\n",
@@ -184,9 +179,7 @@
     }
    },
    "source": [
-    "\n",
-    "\n",
-    "###Duality Theorem:\n",
+    "### Duality Theorem:\n",
     "\n",
     "   * If $\\bx$ is feasible for (P) and $\\bs{y}$ is feasible for (D), then $\\bs{c}^T \\bx \\geq \\bs{b}^T \\bs{y}$, \n",
     "    and only at optimality the equality holds $\\bs{c}^T \\bx^* = \\bs{b}^T \\bs{y}^*$ .\n",
@@ -510,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -524,11 +517,11 @@
       "Optimization terminated successfully.\n",
       "         Current function value: -38.000000  \n",
       "         Iterations: 2\n",
-      "The solution from Scipy Simplex method: [  4.  10.]\n",
+      "The solution from Scipy Simplex method: [ 4. 10.]\n",
       "The Scipy version:\n",
-      "0.19.0\n",
+      "1.1.0\n",
       "The Numpy version:\n",
-      "1.12.1\n"
+      "1.14.3\n"
      ]
     }
    ],
@@ -558,7 +551,7 @@
     }
    },
    "source": [
-    "## Asset Liability Management: Cash-FLow Matching\n",
+    "## II. Asset Liability Management: Cash-FLow Matching\n",
     "\n",
     "* Asset Liability Management (ALM) is the practice of managing a business so that decisions and actions taken with respect to assets and liabilities are coordinated. It's the sound manamegment of the finances to match the asset cash flows with its future liability cash flow needs and capital requirements. \n",
     "\n",
@@ -714,19 +707,18 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\mbox{such that} & \\sum_{i=1,10; M_i\\geq k} \\; C_i(t)x_i +100\\sum_{i=1,10; M_i= k} \\;x_i - s_k + s_{k-1}= L_k, \\;\\;  k = 1,2,\\cdots, 8\n",
+    "\\mbox{s.t.} & \\sum_{i=1,\\cdots,10} ({\\bf 1}_{M_i\\geq k}\\cdot C_i(t) + {\\bf 1}_{M_i=k}\\cdot 100)\\; x_i - s_k + s_{k-1}= L_k, \\;\\;  k = 1,2,\\cdots, 8\n",
     "\\\\\n",
     "     & x_i \\geq 0 \\;\\; i = 1,2,\\cdots, 10; \\;\\;\\; s_k \\geq 0 \\;\\;  k = 1,2,\\cdots, 8\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "where we assume $s_0 = 0$.\n",
-    "\n"
+    "where we assume $s_0 = 0$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -741,9 +733,9 @@
       "         Current function value: 101.615025  \n",
       "         Iterations: 9\n",
       "The solution from Scipy Simplex method:\n",
-      " [  0.04860098   0.2588899    0.           0.           0.14785887\n",
-      "   0.11377323   0.           0.11401282   0.15313384   0.18691589   0.\n",
-      "  14.78588715   0.           0.           0.           0.           0.           0.        ]\n"
+      " [ 0.04860098  0.2588899   0.          0.          0.14785887  0.11377323\n",
+      "  0.          0.11401282  0.15313384  0.18691589  0.         14.78588715\n",
+      "  0.          0.          0.          0.          0.          0.        ]\n"
      ]
     }
    ],
@@ -840,45 +832,11 @@
     "* Cash flow matching so far require the cash flows from the liabilities can be forcasted deterministcally\n",
     "\n",
     "* This is hardly the case: liabilites of Insurance companies are not fixed:\n",
-    "    * Policyhokders can withdraw cash\n",
+    "    * Policyholders can withdraw cash\n",
     "    * Hurricane frequency and severity are highly unpridictable\n",
     "    * Pension payments are hardly deterministic\n",
     "\n",
-    "* That leads to:\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Homework\n",
-    "\n",
-    "\n",
-    "\n",
-    "Similar to our example in class, here is the table of future liabilities (in $millions):\n",
-    "\n",
-    "|  Years | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 |\n",
-    "| :-----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: |\n",
-    "|  Benefits($millions) | 24 | 26 | 28 | 28 | 26 | 29 | 32 | 33 | 34 |\n",
-    "\n",
-    "\n",
-    "And here is the set of bonds that can be invested in:\n",
-    "\n",
-    "<small>\n",
-    "\n",
-    "|  Bonds | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 |\n",
-    "| :-----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: |\n",
-    "|  Price | 102 | 101.625 | 103 | 102 | 102 | 103 | 101 | 101.5 | 102 | 102.75 | 103 | 104 |\n",
-    "|  Coupon(%) | 1.25 | 1.5 | 2.5 | 1.75 | 2.125 | 2.5 | 2.625 | 3 | 3.125 | 3.5 |  3.75 | 4.5 |\n",
-    "|  Maturity(Years) | 1 | 2 | 2 | 3 | 4 | 5 | 5 | 6 | 7 | 8 |  8 | 9 |\n",
-    "\n",
-    "<normal>\n",
-    "Find the **least cost** portfolio of bonds so that the pension fund can meet its future liabilities. Please show your LP problem set up.\n"
    ]
   }
  ],
@@ -899,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
