--- a/Lecture9.ipynb
+++ b/Lecture9.ipynb
@@ -831,7 +831,7 @@
     "\n",
     "* Cash flow matching so far require the cash flows from the liabilities can be forcasted deterministcally\n",
     "\n",
-    "* This is hardly the case: liabilites of Insurance companies are not fixed:\n",
+    "* This is hardly the case: liabilites of insurance companies are not fixed\n",
     "    * Policyholders can withdraw cash\n",
     "    * Hurricane frequency and severity are highly unpridictable\n",
     "    * Pension payments are hardly deterministic\n",
