--- a/Lecture12.ipynb
+++ b/Lecture12.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pylab inline\n",
+    "lecture = 12"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -12,35 +34,29 @@
     "\n",
     "## Topics\n",
     "\n",
-    "* Introduction\n",
+    "* I. Introduction\n",
     "    * Second Order PDE Classification\n",
     "    * Initial and Boundary Conditions\n",
-    "    * Black-Scholes Equation\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "\n"
+    "    * Black-Scholes Equation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "\n",
-    "* Finite Difference Methods for Solving PDEs\n",
+    "* II. Finite Difference Methods for Solving PDEs\n",
     "    * Discretization\n",
     "    * Finite Difference Methods\n",
     "    * The Explicit Methods\n",
     "    * Consistency, Stability and Convergence\n",
     "    * The Implicit Methods\n",
     "    * The Crank-Nicholson Method\n",
-    "       \n",
     "    \n",
-    "* Numerical Examples\n",
+    "* III. Numerical Examples\n",
     "\n"
    ]
   },
@@ -52,32 +68,25 @@
     }
    },
    "source": [
-    "# Introduction\n",
+    "# I. Introduction\n",
     "\n",
     "\n",
-    "* In finance, most partial differential equations (PDE) we encounter are of the form\n",
+    "* In finance, most partial differential equations (PDE) we encounter are of the second order (the highest derivative)\n",
     "\n",
     "$$\n",
     "\\renewcommand{PDut}{\\frac{\\partial u}{\\partial t}}\n",
     "\\renewcommand{PDux}{\\frac{\\partial u}{\\partial x}}\n",
     "\\renewcommand{PDutt}{\\frac{\\partial ^2u}{\\partial t^2}}\n",
     "\\renewcommand{PDuxx}{\\frac{\\partial ^2u}{\\partial x^2}}\n",
-    "a(x,t)\\PDutt + 2b(x,t)\\frac{\\partial ^2u}{\\partial t\\partial x} + c(x,t)\\PDuxx \n",
-    "+  d(x,t)\\PDut + e(x,t)\\PDux = f(t,x,u)\n",
+    "\\renewcommand{PDuyy}{\\frac{\\partial ^2u}{\\partial y^2}}\n",
+    "a(x,t)\\PDutt + 2b(x,t)\\frac{\\partial ^2u}{\\partial t\\partial x} + c(x,t)\\PDuxx +  d(x,t)\\PDut + e(x,t)\\PDux = f(t,x,u)\n",
     "$$\n",
-    "\n",
     "\n",
     "* It can be classified into three categories: **Hyperbolic, Parabolic and Elliptic**\n",
     "\n",
-    "\n",
     "* In general, the different types of equations make a big difference in how the solutions behave and\n",
     "\n",
-    "\n",
-    "* on how we can solve them more effectively\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "* on how we can solve them more effectively"
    ]
   },
   {
@@ -92,20 +101,17 @@
     "\n",
     "### Hyperbolic \n",
     "\n",
-    "\n",
     "* $b^2(x,t) - a(x,t)c(x,t) > 0 $\n",
-    "\n",
     "     $\\;$\n",
     "\n",
     "* The canonical form:\n",
-    "\n",
     "$$\n",
     "\\large{\n",
     "\\PDutt = c^2 \\PDuxx\n",
     "}\n",
     "$$\n",
     "\n",
-    "* Mostly referred to as the **Wave equation**\n"
+    "* No steady state and no diffusion, mostly referred to as the **Wave equation** or **Advection equation**\n"
    ]
   },
   {
@@ -120,11 +126,9 @@
     "\n",
     "\n",
     "* $b^2(x,t) - a(x,t)c(x,t) = 0 $\n",
-    "\n",
     "     $\\;$\n",
     "\n",
     "* The canonical form:\n",
-    "\n",
     "$$\n",
     "\\large{\n",
     "\\PDut = d \\;\\PDuxx\n",
@@ -132,7 +136,7 @@
     "$$\n",
     "\n",
     "\n",
-    "* Mostly referred to as the **Heat equation**\n"
+    "* Evolving to a steady state due to diffusion, referred to as the **Heat equation**\n"
    ]
   },
   {
@@ -146,19 +150,18 @@
     "### Elliptic \n",
     "\n",
     "\n",
-    "* $b^2(x,t) - a(x,t)c(x,t) < 0 $\n",
-    "\n",
+    "* $b^2(x,y) - a(x,y)c(x,y) < 0 $\n",
     "     $\\;$\n",
     "\n",
     "* The canonical form:\n",
-    "\n",
     "$$\n",
     "\\large{\n",
-    "\\PDutt + \\PDuxx = 0\n",
+    "\\PDuxx + \\PDuyy = f(x,y)\n",
     "}\n",
     "$$\n",
     "\n",
-    "* Mostly referred to as the **Laplace or Poisson equation**"
+    "\n",
+    "* Steady state (time independent), mostly referred to as the **Laplace** ($f(x,y) = 0$) or **Poisson** equation."
    ]
   },
   {
@@ -176,7 +179,7 @@
     "\n",
     "$$\n",
     "\\large{\n",
-    "x(x, t=0) = u_0(x)\n",
+    "u(x, t=0) = u_0(x)\n",
     "}\n",
     "$$\n",
     "\n",
@@ -188,7 +191,7 @@
     "}\n",
     "$$\n",
     "\n",
-    "* and the BC is called **Dirichlet** if $b = 0$, **Neumann** if $a = 0$, or **Robin**  if $c = 0$ ."
+    "* and the BC is called **Dirichlet** if $b = 0$, **Neumann** if $a = 0$, or **Robin**  if $a\\cdot b \\neq 0$ ."
    ]
   },
   {
@@ -207,20 +210,7 @@
     "\\PDut + \\frac{1}{2}\\sigma^2S^2\\PDuSS + rS\\PDuS - ru = 0\n",
     "$$\n",
     "\n",
-    "\n",
-    "* It belongs to the parabolic type, and can be converted into the standard Heat equation form by a change-of-variables\n",
-    "\n",
-    "* For **European Call** option, the \"initial\" (the payoff function) and boundary conditions are\n",
-    "\n",
-    "\\begin{aligned}\n",
-    "&u(S,T) = \\max(S-K, 0);\n",
-    "\\\\\n",
-    "&u(0,t) = 0; \n",
-    "\\\\\n",
-    "&u(S,t) = S - Ke^{-r(T-t)}, \\;\\mbox{as } \\; S \\rightarrow \\infty\n",
-    "\\end{aligned}\n",
-    "\n",
-    "\n"
+    "* It belongs to the parabolic type, and can be converted into the standard Heat equation form by a change-of-variables"
    ]
   },
   {
@@ -231,8 +221,25 @@
     }
    },
    "source": [
+    "* For **European Call** option, the \"initial\" (the payoff function) and boundary conditions are\n",
     "\n",
-    "\n",
+    "\\begin{aligned}\n",
+    "&u(S,T) = \\max(S-K, 0);\n",
+    "\\\\\n",
+    "&u(0,t) = 0; \n",
+    "\\\\\n",
+    "&u(S,t) = S - Ke^{-r(T-t)}, \\;\\mbox{as } \\; S \\rightarrow \\infty\n",
+    "\\end{aligned}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* For **European Put** option, the \"initial\" (the payoff function) and boundary conditions are\n",
     "\n",
     "\\begin{aligned}\n",
@@ -262,8 +269,7 @@
     }
    },
    "source": [
-    "# Finite Difference Methods for Solving PDEs\n",
-    "\n",
+    "# II. Finite Difference Methods for Solving PDEs\n",
     "\n",
     "\n",
     "* Very rare that the PDEs have closed form solutions, in general, can only be solved numerically.\n",
@@ -289,19 +295,15 @@
     "* First step in solving PDEs using FDM is to represent the solution $u(x,t)$ as a discrete collection of values at a well distributed grid points in space and time in the proper domain.\n",
     "\n",
     "\n",
-    "* For example, for the  rectangular domain in space and time with $t \\in [0, T]$ and $x\\in [x_{min}, x_{max}]$, we can represent the points simply as $t_0 = 0, t_1, t_2, \\cdots, t_M = T$ in time and $x_0 = x_{min}, x_1, x_2, \\cdots, x_N = x_{max}$ in space. The grid is uniform, i.e. $t_{k+1} = t_k + \\triangle t, \\;\\triangle t = \\frac{T}{M}$ and $x_{i+1} = x_i + \\triangle x, \\;\\triangle x = \\frac{x_{max}-x_{min}}{N}$.\n",
+    "* For example, for the  rectangular domain in space and time with $t \\in [0, T]$ and $x\\in [x_{min}, x_{max}]$, we can represent the points simply as \n",
     "\n",
+    "$$t_0 = 0, t_1, t_2, \\cdots, t_M = T$$\n",
     "\n",
-    "* The discretized version of the solution will be represented by the values of \n",
+    "in time and \n",
     "\n",
-    "$$\n",
-    "u_{i,k} = u(x_i, t_k), \\;\\mbox{for   }  i = 0,1,\\cdots,N, \\mbox{  and  } k = 0,1,\\cdots,M\n",
-    "$$\n",
+    "$$x_0 = x_{min}, x_1, x_2, \\cdots, x_N = x_{max}$$\n",
     "\n",
-    "\n",
-    "* The values of $u(x,t)$ at any other desired points can be approximated via interpolation.\n",
-    "\n",
-    "\n"
+    "in space. The grid is uniform, i.e. $t_{k+1} = t_k + \\triangle t, \\;\\triangle t = \\frac{T}{M}$ and $x_{i+1} = x_i + \\triangle x, \\;\\triangle x = \\frac{x_{max}-x_{min}}{N}$."
    ]
   },
   {
@@ -313,10 +315,27 @@
    },
    "source": [
     "\n",
+    "* The discretized version of the solution will be represented by the values of\n",
     "\n",
-    "* A uniform mesh may not necessary be the most efficient form to work with, in fact, it rarely is.\n",
+    "$$\n",
+    "u_{i,k} = u(x_i, t_k), \\;\\mbox{for   }  i = 0,1,\\cdots,N, \\mbox{  and  } k = 0,1,\\cdots,M\n",
+    "$$\n",
     "\n",
     "\n",
+    "* The values of $u(x,t)$ at any other desired points can be approximated via interpolation.\n",
+    "\n",
+    "\n",
+    "* A uniform mesh may not necessary be the most efficient form to work with, in fact, it rarely is.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* A greatly simplified rule-of-thumb: the mesh needs to be refined around the region where the function varies a lot\n",
     "\n",
     "\n",
@@ -343,9 +362,8 @@
     "\n",
     "* Toolkit for finite difference approximation\n",
     "\n",
-    "\n",
     "|  Partial Derivative | Finite Difference | Type | Order | \n",
-    "| :-----: | :----: | :----: | :----: | \n",
+    "| :------: | :-----: | :-----: | :-----: | \n",
     "|  $\\PDux$ | $\\FDux$ | forward | 1st in $x$ | \n",
     "|  $\\PDux$ | $\\FDuxb$ | backward | 1st in $x$ | \n",
     "|  $\\PDux$ | $\\FDuxc$ | central | 2nd in $x$ | \n",
@@ -378,8 +396,17 @@
     "$$\n",
     "\\small\n",
     "\\FDut - \\frac{1}{2} \\sigma^2 x_i^2 \\FDuxx - r x_i \\FDuxc + r u_{i,k} = 0\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "* This can be rewritten simply as\n",
     "\n",
     "\\begin{aligned}\n",
@@ -389,8 +416,7 @@
     "& + \\left\\{ 1 - \\sigma^2 x_i^2 \\frac{\\triangle t}{\\triangle x^2}  -r \\triangle t \\right\\} u_{i,k}\n",
     "\\\\\n",
     "& + \\left\\{ \\frac{1}{2}\\sigma^2 x_i^2 \\frac{\\triangle t}{\\triangle x^2} + r x_i \\frac{\\triangle t}{2\\triangle x} \\right\\} u_{i+1,k}\n",
-    "\\end{aligned}\n",
-    "\n"
+    "\\end{aligned}"
    ]
   },
   {
@@ -534,8 +560,6 @@
     }
    },
    "source": [
-    "\n",
-    "\n",
     "* For the explicit method,\n",
     "\n",
     "\\begin{aligned}\n",
@@ -608,12 +632,21 @@
     "* which is\n",
     "\n",
     "\\begin{aligned}\n",
-    "e^{a\\triangle t} &= \\sigma^2 x_j^2 \\frac{\\triangle t}{\\triangle x^2} \\cos(l_m\\triangle x)\n",
-    "+  1 - \\sigma^2 x_j^2 \\frac{\\triangle t}{\\triangle x^2} \n",
+    "e^{a\\triangle t} &= \\sigma^2 x_j^2 \\frac{\\triangle t}{\\triangle x^2} \\cos(l_m\\triangle x) +  1 - \\sigma^2 x_j^2 \\frac{\\triangle t}{\\triangle x^2} \n",
     "\\\\\n",
     "& = 1 - \\sigma^2 x_j^2 \\frac{\\triangle t}{\\triangle x^2} \\cdot 2\\sin^2(l_m\\triangle x/2)\n",
     "\\end{aligned}\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "\n",
     "* The stability condition will be saisfied if\n",
     "\n",
@@ -628,7 +661,8 @@
     "$$\n",
     "\n",
     "\n",
-    "* Which is the CFL condition for the explicit method. This says for the explicit method to be stable, the time step needs to be pretty small.\n",
+    "* This is the CFL condition for the explicit method, which says, in order for the explicit method to be stable, the time step size needs to be really small.\n",
+    "\n",
     "\n",
     "* $r\\neq 0$ case?"
    ]
@@ -750,26 +784,9 @@
     }
    },
    "source": [
-    "# Numerical Examples \n",
+    "# III. Numerical Examples \n",
     "\n",
     "* Will go through the Black Scholes example in next lecture.\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Higher Dimension Methods \n",
-    "\n",
-    "* What to do when there are more than one spatial variables (Heston Stochastic Vol Model)? - ADI methods.\n",
-    "\n",
     "\n",
     "\n",
     "\n"
@@ -790,6 +807,19 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Reference\n",
+    "\n",
+    "* L. Andersen and V. Piterbarg, Chapter 4 of Interest Rate Modeling, Volumn I, Atlantic Financial Press, 2010."
+   ]
   }
  ],
  "metadata": {
@@ -809,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
