--- a/Lecture8.ipynb
+++ b/Lecture8.ipynb
@@ -857,12 +857,8 @@
     "\n",
     "* The goal is to find a local minimum satisfying the constriants.\n",
     "\n",
-    "* And we will denote the feasible region as domain \n",
-    "$\\mathcal{D} = \\{\\bx \\in \\mathbb{R}^n | \\; \\bs{h}(\\bx)  = \\bs{0}, \\; \\bs{g}(\\bx) \\leq \\bs{0}\\}$.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "* And we will denote the ovarall domain of definition as\n",
+    "$\\mathcal{D} = DOM(f)\\cap DOM(h) \\cap DOM(g)$."
    ]
   },
   {
