--- a/Lecture9.ipynb
+++ b/Lecture9.ipynb
@@ -794,7 +794,7 @@
     "* With these excess cash flows, it is then natural to assume that they will be re-invested, and the return is simply $r$, therefore the constraints becomes\n",
     "\n",
     "$$\n",
-    "\\sum_j x_j C_{j,k} - s_k + r * s_{k-1} = L_k, \\;\\;  k = 1,\\cdots,K\n",
+    "\\sum_j x_j C_{j,k} - s_k + (1+r) \\cdot s_{k-1} = L_k, \\;\\;  k = 1,\\cdots,K\n",
     "$$\n",
     "where we set $s_0 = 0$.\n"
    ]
