--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -35,12 +35,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Problem 0:\n",
+    "\n",
+    "I have read and understood the [class policy]( https://nbviewer.jupyter.org/github/yadongli/nyumath2048/blob/master/ClassPolicies.ipynb), especially the section about cheating. Please type your full names below to acknowledge:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Problem 1:\n",
     "\n",
     "Set up your Python and IPython notebook environment and show case the following IPython functionalities:\n",
     "\n",
     "2. use ? or help() to show comments (docstring) of a python function\n",
     "3. use %pdb to debug the following code, show how to print out the value of b inside function bug() using the debugger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.6.7'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from platform import python_version\n",
+    "python_version()"
    ]
   },
   {
@@ -219,14 +249,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
