--- a/ClassPolicies.ipynb
+++ b/ClassPolicies.ipynb
@@ -8,11 +8,7 @@
     }
    },
    "source": [
-    "# Class Policies for NYU MATH-GA2048\n",
-    "\n",
-    "* Homework\n",
-    "* Cheating policy\n",
-    "* Project"
+    "# Class Policies for NYU MATH-GA2048"
    ]
   },
   {
@@ -55,13 +51,16 @@
    "source": [
     "## Cheating\n",
     "\n",
-    "Cheating will not be tolerated, any incidents of cheating will be severely punished and reported to the leadership of the Math Finance program. The minimum punishment is a full letter grade reduction in your final grade of the class, and we reserve the right for more severe punishment. \n",
+    "Cheating will not be tolerated, any incidents of cheating will be severely punished and reported to the leadership of the Math Finance program. The minimum punishment is a full letter grade reduction in your final grade of the class, and we reserve the right to impose more severe punishment. \n",
     "\n",
     "* Discuss homework probems with anyone out of your group is a form of cheating. \n",
-    "* If you have any questions on the homework problem, post your question on the class forum instead of discussing them with other students.\n",
+    "  * If you have any questions on the homework problem, post your question on the class forum instead of discussing with other students.\n",
     "* Using other people's code, solutions or ideas on your own homework is cheating. \n",
-    "* All parties in all groups involved in cheating will be punished equally. \n",
-    "* Copying or using previous' year's homework solution is a serious form of cheating."
+    "* All parties involved in cheating will be punished the same way. eg., disclosing and letting others to use your homework solution or ideas will be punished.\n",
+    "* All parties in the same group are punished the same way, if one of them is caught cheating.\n",
+    "* Copying or using previous' year's homework solution is a serious form of cheating.\n",
+    "* Disclosing homework solutions of either your own or those from the professor is cheating.\n",
+    "* Memorizing and disclosing final exam questions to others is cheating."
    ]
   }
  ],
