--- a/ClassPolicies.ipynb
+++ b/ClassPolicies.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Homework is assigned weekly at the end of the lecture\n",
     "* Homework can be completed by groups of two, you can form your own groups. However, you are strongly encouraged to complete homework on your own without a partner.\n",
-    "* Homework should be treated as open book exams, you are required to be completed independently by your group. You are not allowed to discuss homework problems with anyone out of your group, or receive or give help in any form or shape from/to anyone out of your group. \n",
+    "* Homework should be treated as open book exams, you are required to complete your homework independently without discussing anyone out of your group, or receiving or giving any help from/to anyone out of your group. \n",
     "* In general, late homework won't be accepted. Exceptions will only be made if certain event affects multiple students (e.g., a super-day interview, or a firm event).\n",
     "* One lowest scored homework won't count towards your final homework score\n",
     "\n",
