--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -278,7 +278,7 @@
     "## Exponential distribution\n",
     "\n",
     "Exponential distribution has the maximum entropy for a positive random variable with a given expectation\n",
-    "* Without addtional information, we have to assume all survival times are exponetially distributed.\n",
+    "* Without additional information, we have to assume all survival times are exponentially distributed.\n",
     "\n",
     "Apply the Lagrange multiplier:\n",
     "\n",
@@ -427,11 +427,11 @@
     "\n",
     "* Also known as the Kullback–Leibler distance\n",
     "\n",
-    "With a discrete prior $\\mathbb{P}[\\tilde{x} = x_k] = q_k$ and posterier $p_k$ :\n",
+    "With a discrete prior $\\mathbb{P}[\\tilde{x} = x_k] = q_k$ and posterior $p_k$ :\n",
     "\n",
     "$$ h(\\bs p | \\bs q) = -\\sum_k p_k \\log(p_k) + \\sum_k p_k \\log(q_k) = - \\sum_k p_k \\log\\left(\\frac{p_k}{q_k}\\right) $$\n",
     "\n",
-    "Similarly with a continuous prior $q(x)$ and posterier $p(x)$ :\n",
+    "Similarly with a continuous prior $q(x)$ and posterior $p(x)$ :\n",
     "\n",
     "$$ h\\left(p(x) | q(x)\\right) = - \\intr p(x) \\log \\left(\\frac{p(x)}{q(x)}\\right) dx $$\n",
     "\n",
@@ -838,7 +838,7 @@
     "\n",
     "We can take advantage of the prior belief that the stock return is normal, and use the observed ATM vol in the prior.  \n",
     "\n",
-    "* The resulting distribution and volatility skew are reasonble\n",
+    "* The resulting distribution and volatility skew are reasonable\n",
     "* The whole vol skew curve is inferred from three option prices\n",
     "* The resulting option prices are very close to the actual market"
    ]
@@ -905,7 +905,7 @@
     "\n",
     "However, there are some unanswered questions:\n",
     "\n",
-    "* which is a better state varaible, zero rate $r(t) = -\\frac{1}{t}\\log(b(t))$ or cumulative yield $y(t) = -\\log(b(t))$?\n",
+    "* which is a better state variable, zero rate $r(t) = -\\frac{1}{t}\\log(b(t))$ or cumulative yield $y(t) = -\\log(b(t))$?\n",
     "* what tension parameter makes more sense?\n",
     "* what if market prices are arbitrageable?\n",
     "\n",
@@ -998,7 +998,7 @@
     "* $C$ represents the cashflow of the benchmark instruments \n",
     "* $\\bs b$ is the zero coupon bond prices at quarterly maturities\n",
     "* $\\bs v$ is the benchmark instruments' prices\n",
-    "* Often in practice, we sacrefice exact fit for better curve properties. \n",
+    "* Often in practice, we sacrifice exact fit for better curve properties. \n",
     "* Maximum entropy is a powerful technique to find the right trade off"
    ]
   },
@@ -1161,7 +1161,7 @@
     "## Exact fit\n",
     "\n",
     "We can force exact fits to the market prices by setting $W^{-1} = 0E$ \n",
-    "* $E$ is a digonal matrix of bid/ask term structure of swaps\n",
+    "* $E$ is a diagonal matrix of bid/ask term structure of swaps\n",
     "* recall $\\bs e = W^{-1}\\bs u$"
    ]
   },
@@ -1554,7 +1554,7 @@
     "\n",
     "* directly bootstrapping would lead to negative forward discount rate\n",
     "\n",
-    "How can we adjust the market prices to remove aribitrage?\n",
+    "How can we adjust the market prices to remove arbitrage?\n",
     "* it is not easy as there are (infinitely) many ways to do so \n",
     "\n",
     "ME method can remove arbitrages with minimal distortion to the market:\n",
@@ -1761,7 +1761,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The reslting ME distribution also identifies the bad 7Y price\n",
+    "* The resulting ME distribution also identifies the bad 7Y price\n",
     "* We can adjust the $W^{-1}$ to reduce the impact of bad prices"
    ]
   },
@@ -2012,7 +2012,7 @@
    "source": [
     "## Associativity\n",
     "\n",
-    "Associativity means a top-down applicaiton of the allocation yields identical results as a bottom-up application:\n",
+    "Associativity means a top-down application of the allocation yields identical results as a bottom-up application:\n",
     "\n",
     "<center>\n",
     "<img src=\"img/assoc.png\" width=400 height=400>\n",
@@ -2085,7 +2085,7 @@
     "\n",
     "\n",
     "* all organizational information are lost\n",
-    "* the allocation is computed from a homogenous soup of trades"
+    "* the allocation is computed from a homogeneous soup of trades"
    ]
   },
   {
@@ -2125,7 +2125,7 @@
     "\n",
     "* In practice, most risk capital metrics are homogeneous\n",
     "* Euler allocation is by trades' marginal contribution\n",
-    "* A-S/Euler allocation are computationtally efficient\n",
+    "* A-S/Euler allocation are computationally efficient\n",
     "  * no need for Monte Carlo"
    ]
   },
@@ -2164,7 +2164,7 @@
     "## Perverse incentives\n",
     "\n",
     "* A-S allocation could produce perverse incentives in practice\n",
-    "* A consequence of using infitesimal sized allocation unit\n",
+    "* A consequence of using infinitesimally sized allocation unit\n",
     "* Fairness depends on organization\n",
     "\n",
     "Consider replacement cost of a bank with two trading desks X and Y:\n",
@@ -2253,7 +2253,7 @@
    "source": [
     "## Correct incentives\n",
     "\n",
-    "The constrained Shapley is additive and associtive by construction, it gives the right incentives:\n",
+    "The constrained Shapley is additive and associative by construction, it gives the right incentives:\n",
     "\n",
     "| Day | X PV | Y PV | Banks RC | C-Shapley Allocation |\n",
     "| :---: | :---: | :---: | :---: | :---: |\n",
@@ -2388,10 +2388,10 @@
     "Change allocation methodology is almost mission impossible:\n",
     "* zero-sum: a desk's gain is another desk's loss\n",
     "* it affects the interests and livelihood of every business unit\n",
-    "* diffcult to build consensus amongst business units with conflicting interests\n",
+    "* difficult to build consensus amongst business units with conflicting interests\n",
     "\n",
     "The only way to implement the change is to:\n",
-    "* establish a theoreticaly sound methodology that is impossible to argue against (C-Shapley/CAS)\n",
+    "* establish a theoretically sound methodology that is impossible to argue against (C-Shapley/CAS)\n",
     "* explain the methodology to every business unit, and ask business heads to document their objections\n",
     "  * \"I don't like my allocation\" is not a good objection\n",
     "* the process takes time and effort"
@@ -2562,7 +2562,7 @@
     "\n",
     "Value at risk (VaR) is a quantile measure of the portfolio's risk. \n",
     "\n",
-    "* If a portfolio's 10-day 99% VaR is \\$10M, then the probabilty for the portfolio to lose more than \\$10M in 10 days is 1%.\n",
+    "* If a portfolio's 10-day 99% VaR is \\$10M, then the probability for the portfolio to lose more than \\$10M in 10 days is 1%.\n",
     "* It is the most important and widely quoted risk management metric\n",
     "\n",
     "\n",
