--- a/Lecture11.ipynb
+++ b/Lecture11.ipynb
@@ -210,7 +210,7 @@
     "\\hC(z,\\cdot) := \\mathcal{L}[C](z) = \\int_{0}^{\\infty}C(t,\\cdot)e^{-zt} \\; dt\n",
     "$$\n",
     "\n",
-    "Taking the Laplace trasform of the Black-Scholes equation,\n",
+    "Taking the Laplace transform of the Black-Scholes equation,\n",
     "\n",
     "$$\n",
     "z\\hC = \\frac{1}{2}\\sigma^2S^2 \\hC_{SS} + rS \\hC_S - r \\hC + C_0\n",
@@ -297,7 +297,7 @@
     "\n",
     "Employing finite difference method typically means:\n",
     "\n",
-    "1) Generate a grid of points $(t_k, y_i)$ where we want to find the soltuions\n",
+    "1) Generate a grid of points $(t_k, y_i)$ where we want to find the solutions\n",
     "\n",
     "2) Substitute the derivatives in ODE/PDE with finite difference schemes, which converts the ODE/PDE into a system of algebraic equations.\n",
     "\n",
@@ -305,7 +305,7 @@
     "\n",
     "4) Implement and debug the compute code.\n",
     "\n",
-    "5) Perform sanity check, error analysis, sensitity analysis, etc, by any available means: intuitively, analytically or numerically.\n",
+    "5) Perform sanity check, error analysis, sensitivity analysis, etc, by any available means: intuitively, analytically or numerically.\n",
     "\n",
     "\n",
     "\n"
@@ -354,7 +354,7 @@
     "\n",
     "* For any FDM that are employed to solve practical problems, we should ask\n",
     "\n",
-    "    * 1) How acurate is the method?\n",
+    "    * 1) How accurate is the method?\n",
     "    * 2) Does it converge?\n",
     "    * 3) What is the best choice of step sizes?\n",
     "\n",
@@ -498,7 +498,7 @@
    },
    "source": [
     "\n",
-    "* Zero-stability essentially says errors (e.g. roundoff erros, function evaluation errors) introduced in any step does not get magnified later on.\n",
+    "* Zero-stability essentially says errors (e.g. roundoff errors, function evaluation errors) introduced in any step does not get magnified later on.\n",
     "\n",
     "\n",
     "* One-step FDM can be shown to be zero-stable given sufficiently small step size and if $f$ is Lipschitz continuous in $y$."
@@ -953,7 +953,7 @@
     "y'' + (\\lambda+1)y' + \\lambda y = 0, \\;\\; y(0) = 1, \\;\\; y'(0) = \\lambda - 2, \\;\\; \\lambda >> 1.\n",
     "$$\n",
     "\n",
-    "Rewrite it as a system of first order ODEs. Find the region of absolute stability. (Hint: find the eigenvalue decomposition of the coefficient matrix, and the region of absolute stability is the domain where the step size is chosen so that each eigen value satifies the condition for the 1D ODE.)\n",
+    "Rewrite it as a system of first order ODEs. Find the region of absolute stability. (Hint: find the eigenvalue decomposition of the coefficient matrix, and the region of absolute stability is the domain where the step size is chosen so that each eigen value satisfies the condition for the 1D ODE.)\n",
     "\n",
     "\n",
     "\n"
