--- a/Lecture12.ipynb
+++ b/Lecture12.ipynb
@@ -431,7 +431,7 @@
     "\n",
     "* For any FDM that are used to solve practical problems, we should ask\n",
     "\n",
-    "    * 1) How acurate is the method?    \n",
+    "    * 1) How accurate is the method?    \n",
     "    \n",
     "    * 2) Does it converge?    \n",
     "    \n",
@@ -648,7 +648,7 @@
    },
    "source": [
     "\n",
-    "* The stability condition will be saisfied if\n",
+    "* The stability condition will be satisfied if\n",
     "\n",
     "$$\n",
     "|| 1 - \\sigma^2 x_j^2 \\frac{\\triangle t}{\\triangle x^2} \\cdot 2\\sin^2(l_m\\triangle x/2) || < 1\n",
