--- a/Lecture13.ipynb
+++ b/Lecture13.ipynb
@@ -128,7 +128,7 @@
     "* But for two dimensional problems, it is worthwhile to explore the FDM further.\n",
     "\n",
     "\n",
-    "* Finance examples that you will need many sptial variables: stochastic vol model, convertible bonds, credit risky bonds, variable annuities, etc.\n",
+    "* Finance examples that you will need many spatial variables: stochastic vol model, convertible bonds, credit risky bonds, variable annuities, etc.\n",
     "\n"
    ]
   },
@@ -276,7 +276,7 @@
    "source": [
     "\n",
     "\n",
-    "* Essentially, this says trying to solve the problem in a multistep aproach: each step is equivalent to the one dimensional Crank-Nicolson method.\n",
+    "* Essentially, this says trying to solve the problem in a multistep approach: each step is equivalent to the one dimensional Crank-Nicolson method.\n",
     "\n",
     "\n",
     "* This is  merely the basic form, the strategy can be customized to further improve the efficiency (not all steps are implicit) or accuracy (high order)\n"
