--- a/Lecture8.ipynb
+++ b/Lecture8.ipynb
@@ -523,7 +523,7 @@
     "\n",
     "\n",
     "\n",
-    "* Will be focusing on smooth functions (typically at least twice differentable). The main purpose here is to show the various types of algorithms for solving the unconstrained optimization problems.\n",
+    "* Will be focusing on smooth functions (typically at least twice differentiable). The main purpose here is to show the various types of algorithms for solving the unconstrained optimization problems.\n",
     "\n",
     "\n"
    ]
@@ -604,7 +604,7 @@
     "\n",
     "### 1. Direct Search Method\n",
     "\n",
-    "* Similar in spirit to the Bisection method in one dimemsion. Requires only function evaluations.\n",
+    "* Similar in spirit to the Bisection method in one dimension. Requires only function evaluations.\n",
     "\n",
     "* Quoting M. Wright: \"A direct search method does not 'in its heart' develop an approximate gradient\".\n",
     "\n",
@@ -659,7 +659,7 @@
     }
    },
    "source": [
-    "* Advantages: simple, only function evaulation needed.\n",
+    "* Advantages: simple, only function evaluation needed.\n",
     "\n",
     "* Deficiencies: slow, may fail to converge in higher dimensions\n",
     "\n",
@@ -818,7 +818,7 @@
     "\n",
     "* Now add  constraints.\n",
     "\n",
-    "* Constrainted problems are much harder: even a seemingly simple Integer Programming problem is **NP-Complete** (i.e. can't be solved in polynomial time).\n",
+    "* Constrained problems are much harder: even a seemingly simple Integer Programming problem is **NP-Complete** (i.e. can't be solved in polynomial time).\n",
     "\n",
     "\n",
     "\n",
@@ -853,11 +853,11 @@
     "$$\n",
     "\n",
     "\n",
-    "* Will be focusing on smooth functions (typically at least twice differentable). \n",
+    "* Will be focusing on smooth functions (typically at least twice differentiable). \n",
     "\n",
-    "* The goal is to find a local minimum satisfying the constriants.\n",
+    "* The goal is to find a local minimum satisfying the constraints.\n",
     "\n",
-    "* And we will denote the ovarall domain of definition as\n",
+    "* And we will denote the overall domain of definition as\n",
     "$\\mathcal{D} = DOM(f)\\cap DOM(h) \\cap DOM(g)$."
    ]
   },
