--- a/Lecture9.ipynb
+++ b/Lecture9.ipynb
@@ -50,7 +50,7 @@
     }
    },
    "source": [
-    "* II. Asset Liability Manamgement: Cash-Flow Matching\n",
+    "* II. Asset Liability Management: Cash-Flow Matching\n",
     "\n",
     "    * Basic setup\n",
     "    * Example\n",
@@ -553,7 +553,7 @@
    "source": [
     "## II. Asset Liability Management: Cash-FLow Matching\n",
     "\n",
-    "* Asset Liability Management (ALM) is the practice of managing a business so that decisions and actions taken with respect to assets and liabilities are coordinated. It's the sound manamegment of the finances to match the asset cash flows with its future liability cash flow needs and capital requirements. \n",
+    "* Asset Liability Management (ALM) is the practice of managing a business so that decisions and actions taken with respect to assets and liabilities are coordinated. It's the sound management of the finances to match the asset cash flows with its future liability cash flow needs and capital requirements. \n",
     "\n",
     "* ALM practice now considers a wide range of risks: liquidity, interest rate, equity, currency, legal, etc.\n",
     "\n",
@@ -813,7 +813,7 @@
     "\n",
     "* Which introduces another dimension: the borrowing rate and lending (re-investment) rate are typically different in real life. \n",
     "\n",
-    "* In practice, these assumtions (or approximations) can certainly make a big difference in terms of the complexity and realistism of your model.\n",
+    "* In practice, these assumptions (or approximations) can certainly make a big difference in terms of the complexity and realistism of your model.\n",
     "\n",
     "\n",
     "\n"
@@ -829,11 +829,11 @@
    "source": [
     "### Undeterministic future liabilities and asset returns\n",
     "\n",
-    "* Cash flow matching so far require the cash flows from the liabilities can be forcasted deterministcally\n",
+    "* Cash flow matching so far require the cash flows from the liabilities can be forcasted deterministically\n",
     "\n",
-    "* This is hardly the case: liabilites of insurance companies are not fixed\n",
+    "* This is hardly the case: liabilities of insurance companies are not fixed\n",
     "    * Policyholders can withdraw cash\n",
-    "    * Hurricane frequency and severity are highly unpridictable\n",
+    "    * Hurricane frequency and severity are highly unpredictable\n",
     "    * Pension payments are hardly deterministic\n",
     "\n",
     "\n"
