--- a/Homework8.ipynb
+++ b/Homework8.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "Prove the statement that for convex problems, any local minimum is also a global minimum.\n",
     "\n",
-    "Hint: proof by contradiction. Define the ball for the local mimimum region, and assume there is a lower global minimum, find a point within the ball such that its function value is less than the local minimum value.\n"
+    "Hint: proof by contradiction. Define the ball for the local minimum region, and assume there is a lower global minimum, find a point within the ball such that its function value is less than the local minimum value.\n"
    ]
   }
  ],
