Updates to head branch

--- a/Lecture12.ipynb
+++ b/Lecture12.ipynb
@@ -818,7 +818,9 @@
    "source": [
     "# Reference\n",
     "\n",
-    "* L. Andersen and V. Piterbarg, Chapter 4 of Interest Rate Modeling, Volumn I, Atlantic Financial Press, 2010."
+    "* L. Andersen and V. Piterbarg, Chapter 4 of Interest Rate Modeling, Volumn I, Atlantic Financial Press, 2010.\n",
+    "\n",
+    "* D. Duffy, Finite Difference Method in Financial Engineering, John Wiley & Sons, 2006."
    ]
   }
  ],
