--- a/Lecture13.ipynb
+++ b/Lecture13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 77,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 80,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -520,9 +520,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed Time1: 0.11122798919677734\n",
-      "Elapsed Time2: 0.10223126411437988\n",
-      "Elapsed Time3: 0.09488534927368164\n"
+      "Elapsed Time1: 0.11624479293823242\n",
+      "Elapsed Time2: 0.10227036476135254\n",
+      "Elapsed Time3: 0.08592414855957031\n"
      ]
     },
     {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -621,9 +621,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed Time1: 0.09915733337402344\n",
-      "Elapsed Time2: 0.08566570281982422\n",
-      "Elapsed Time3: 0.09280514717102051\n"
+      "Elapsed Time1: 0.08881139755249023\n",
+      "Elapsed Time2: 0.08301854133605957\n",
+      "Elapsed Time3: 0.09055495262145996\n"
      ]
     },
     {
@@ -712,10 +712,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 82,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "outputs": [],
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -809,9 +809,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed Time1: 0.13730168342590332\n",
-      "Elapsed Time2: 0.03946208953857422\n",
-      "Elapsed Time3: 0.010237455368041992\n"
+      "Elapsed Time1: 0.13419318199157715\n",
+      "Elapsed Time2: 0.03331756591796875\n",
+      "Elapsed Time3: 0.009321451187133789\n"
      ]
     },
     {
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -901,9 +901,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed Time1: 0.2161719799041748\n",
-      "Elapsed Time2: 0.04758620262145996\n",
-      "Elapsed Time3: 0.012785196304321289\n"
+      "Elapsed Time1: 0.1549983024597168\n",
+      "Elapsed Time2: 0.041253089904785156\n",
+      "Elapsed Time3: 0.0\n"
      ]
     },
     {
