--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Scientific Computing in Finance\n",
     "\n",
-    "* MATH-GA 2048, Spring 2019\n",
+    "* MATH-GA 2048, Spring 2020\n",
     "* Courant Institute of Mathematical Sciences, New York University"
    ]
   },
@@ -24,10 +24,9 @@
    "source": [
     "## Instructors\n",
     "\n",
-    "#### Yadong Li\n",
-    "* MD, Head of Trading Central, Quantitative Analytics, Barclays\n",
-    "* Ph.D. in Physics, M.S. in Computer Sciences, University of Wisconsin-Madison\n",
-    "* Master of Financial Engineering, University of California, Berkeley \n",
+    "#### Wujiang Lou\n",
+    "* Senior trader, Global Fixed Income, HSBC\n",
+    "* Ph.D. in Aeronautics and Astronautics, Nanjing University\n",
     "\n",
     "#### Hongwei Cheng\n",
     "* Chief Risk Officer, Head of Research, Mill Hill Capital\n",
@@ -455,7 +454,7 @@
     "\n",
     "Python version:\n",
     "\n",
-    "* ** Python 3.6.x or higher ** : python is not backward compatible, do not use Python 2\n",
+    "* ** Python 3.6.x only ( version 3.7.x is not supported currently) ** : python is not backward compatible, do not use Python 2\n",
     "* With the latest Jupyter notebook, numpy/pandas/scipy etc.\n",
     "* either 32bit or 64bit version works\n",
     "\n",
@@ -1956,7 +1955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
