--- a/PythonSetup.ipynb
+++ b/PythonSetup.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "## Python Installation\n",
     "\n",
-    "**Python version 3.6.x or above**\n",
+    "**Python version 3.6.x only (version 3.7.x are not supported currently)**\n",
     "* Python 3.x is not backward compatible\n",
     "* either 32bit or 64bit version works, 64bit is recommended \n",
     "\n",
@@ -178,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
