--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -116,14 +116,13 @@
     "\n",
     "| Week | Main Topics | Practical Problems | Instructor |\n",
     "| :----: | :-----: | :-----: | :-----: |\n",
-    "| 1 | Introduction and Error Analysis | Error and floating point numbers | Y. Li |\n",
-    "| 2-3 | Linear Algebra | Portfolio optimization, PCA, least square | Y. Li |\n",
-    "| 4-5 | Rootfinding and interpolation | Curve building | Y. Li |\n",
-    "| 6 | Derivatives and integration | Hedging, Risk Transformation | Y. Li |\n",
-    "| 7-8 | Monte Carlo simulation | Exotic pricing | Y. Li |\n",
-    "| 9-10 | Optimization | Model calibration | H. Cheng |\n",
-    "| 11-12 | ODE/PDE | Pricing | H. Cheng |\n",
-    "| 13 | Entropy and Allocation | Advanced practical problems | Y. Li |"
+    "| 1 | Introduction and Error Analysis | Error and floating point numbers | H. Cheng |\n",
+    "| 2-3 | Linear Algebra | Portfolio optimization, PCA, least square | H. Cheng |\n",
+    "| 4-5 | Rootfinding and interpolation | Curve building | H. Cheng |\n",
+    "| 6 | Derivatives and integration | Hedging, Risk Transformation | H. Cheng |\n",
+    "| 7-8 | Monte Carlo simulation | Exotic pricing | H. Cheng |\n",
+    "| 9-10 | Optimization | Model calibration | W. Lou |\n",
+    "| 11-13 | ODE/PDE | Pricing | W. Lou |"
    ]
   },
   {
