Tiny Lec 1 and 2 updates

--- a/Lecture1.ipynb
+++ b/Lecture1.ipynb
@@ -507,11 +507,9 @@
     "## Sources of error\n",
     "\n",
     "Imprecision in the theory or model itself\n",
-    "\n",
     "* George Box: \"essentially, all models are wrong, but some are useful\"\n",
     "\n",
-    "Truncation Error in numerical algorithm: introduced when exact mathematical formulae are represented by approximations.\n",
-    "\n",
+    "Truncation Errors: introduced when exact mathematical formulae are represented by approximations.\n",
     "* Convergence error\n",
     " * Monte Carlo simulation\n",
     " * Numerical integration\n",
@@ -519,7 +517,6 @@
     "* Termination of iterations\n",
     "\n",
     "Roundoff Errors: occur because computers have a limited ability to represent numbers\n",
-    "\n",
     "* Floating point number\n",
     "* Rounding\n",
     " \n",
